--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -8,3 +8,61 @@
 html {
     font-size: 16px;
 }
+
+/* TODO implement tailwind */
+.hnds-button {
+    outline: none;
+    border-radius: 0.25rem;
+    padding: 0.5rem 1.25rem;
+
+    background-color: #14b8a6;
+    color: #ffffff;
+    text-decoration: none;
+
+    transition-property: all;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 150ms;
+}
+
+.hnds-button:hover {
+    background-color: #2dd4bf;
+}
+
+.hnds-button:visited {
+    color: #ffffff;
+}
+
+.hnds-button:focus-visible {
+    --tw-ring-color: #3b82f6;
+    --tw-ring-offset-color: #ffffff;
+    --tw-ring-offset-width: 2px;
+    --tw-ring-shadow: 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+
+    box-shadow: 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color), var(--tw-ring-shadow);
+
+    background-color: #2dd4bf;
+}
+
+.main-title {
+    max-width: 48rem;
+
+    margin: 8rem auto;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.main-title .name {
+    color: #1e293b;
+    font-size: 1.25rem;
+    line-height: 1.75rem
+}
+
+.main-title .heading {
+    margin-bottom: 0.75rem;
+
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+    text-align: center;
+}
