--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -66,3 +66,38 @@ html {
     line-height: 2.25rem;
     text-align: center;
 }
+
+// TAILWIND //
+
+// Layout
+
+.overflow-hidden {
+    overflow: hidden;
+}
+
+// Spacing
+
+.mt-20 {
+    margin-top: 5rem;
+}
+
+.mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+// Sizing
+
+.w-\[900px\] {
+    width: 900px;
+}
+
+.h-\[675px\] {
+    height: 675px;
+}
+
+// Backgrounds
+
+.bg-green-300 {
+    background-color: rgb(134 239 172);
+}
