--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -119,3 +119,14 @@ html {
 .rounded-full {
     border-radius: 9999px;
 }
+
+// Interactivity
+
+.select-none {
+    -moz-user-select: -moz-none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+
+    -ms-user-select: none;
+    user-select: none;
+}
