feat: add styles when creet is held

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -67,6 +67,11 @@ html {
     text-align: center;
 }
 
+.held-creet {
+    z-index: 10;
+    box-shadow: 0 0px 6px 4px rgba(0, 0, 0, .25);
+}
+
 // TAILWIND //
 
 // Layout
