--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -76,6 +76,10 @@ html {
 
 // Layout
 
+.inline-block {
+    display: inline-block;
+}
+
 .flex {
     display: flex;
 }
@@ -94,14 +98,38 @@ html {
 
 // Flexbox & Grid
 
+.gap-16 {
+    gap: 4rem;
+}
+
 .justify-center {
     justify-content: center;
 }
 
+.items-center {
+    align-items: center;
+}
+
 // Spacing
+
+.px-6 {
+    padding: 1.5rem;
+}
+
+.py-4 {
+    padding: 1rem;
+}
 
 .mt-20 {
     margin-top: 5rem;
+}
+
+.mr-1\.5 {
+    margin-right: 0.375rem;
+}
+
+.mb-3 {
+    margin-bottom: 0.75rem;
 }
 
 .mx-auto {
@@ -119,11 +147,24 @@ html {
     width: 900px;
 }
 
+.min-w-64 {
+    min-width: 16rem;
+}
+
 .h-\[675px\] {
     height: 675px;
 }
 
+.size-4 {
+    width: 1rem;
+    height: 1rem;
+}
+
 // Backgrounds
+
+.bg-amber-50 {
+    background-color: rgb(255 251 235);
+}
 
 .bg-green-300 {
     background-color: rgb(134 239 172);
@@ -134,6 +175,10 @@ html {
 }
 
 // Borders
+
+.rounded {
+    border-radius: 0.25rem;
+}
 
 .rounded-full {
     border-radius: 9999px;
