feat: add sick creet caption to sheet

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -208,6 +208,10 @@ html {
     background-color: rgb(107 33 168);
 }
 
+.bg-rose-400 {
+    background-color: rgb(251 113 133);
+}
+
 // Borders
 
 .rounded {
