feat: add hospital area at the bottom of the screen

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -196,6 +196,10 @@ html {
 
 // Backgrounds
 
+.bg-slate-300 {
+    background-color: rgb(203 213 225);
+}
+
 .bg-amber-50 {
     background-color: rgb(255 251 235);
 }
