feat: add berserk sick creets

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -89,6 +89,12 @@ html {
     }
 }
 
+.berserk-creet {
+    &>div {
+        background-color: rgb(74 4 78);
+    }
+}
+
 // TAILWIND //
 
 // Layout
