--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -95,6 +95,12 @@ html {
     }
 }
 
+.mean-creet {
+    &>div {
+        background-color: rgb(250 204 21);
+    }
+}
+
 // TAILWIND //
 
 // Layout
