--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -230,6 +230,10 @@ html {
     background-color: rgb(255 251 235);
 }
 
+.bg-yellow-400 {
+    background-color: rgb(250, 204, 21);
+}
+
 .bg-green-300 {
     background-color: rgb(134 239 172);
 }
@@ -240,6 +244,10 @@ html {
 
 .bg-purple-800 {
     background-color: rgb(107 33 168);
+}
+
+.bg-fuchsia-950 {
+    background-color: rgb(74 4 78);
 }
 
 .bg-rose-400 {
